# graphql-cli

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  vagga.yaml
src/: format.rs  jsonize.rs  main.rs
